--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.18",
+    "@google/generative-ai": "^0.21.0",
+    "@opentelemetry/api": "^1.9.0",
     "@react-email/components": "^0.0.32",
+    "ai": "^4.0.33",
     "bcryptjs": "^2.4.3",
     "mongoose": "^8.9.4",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
+    "openai": "^4.78.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^3.0.6",
