--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   "dependencies": {
     "@ai-sdk/openai": "^1.0.18",
     "@google/generative-ai": "^0.21.0",
+    "@hookform/resolvers": "^3.10.0",
     "@opentelemetry/api": "^1.9.0",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "@react-email/components": "^0.0.32",
     "ai": "^4.0.33",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.471.1",
     "mongoose": "^8.9.4",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
@@ -22,7 +30,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^3.0.6",
+    "react-hook-form": "^7.54.2",
     "resend": "^4.0.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
