--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.18.0",
     "lucide-react": "^0.471.1",
     "mongoose": "^8.9.4",
     "next": "15.1.4",
