--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.18.0",
     "lucide-react": "^0.471.1",
     "mongoose": "^8.9.4",
@@ -35,6 +36,7 @@
     "react-dom": "^19.0.0",
     "react-email": "^3.0.6",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "resend": "^4.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
