resend mail change to nodemailer

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@react-email/components": "^0.0.32",
+    "@react-email/render": "^1.0.4",
     "ai": "^4.0.33",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
@@ -31,6 +32,7 @@
     "mongoose": "^8.9.4",
     "next": "15.1.4",
     "next-auth": "^5.0.0-beta.25",
+    "nodemailer": "^6.9.16",
     "openai": "^4.78.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -47,6 +49,7 @@
     "@eslint/eslintrc": "^3",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
